--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2745,5 +2745,8 @@
     <ClCompile Include="Baekjoon\0.DataStructure\0.Bronze\9933.cpp">
       <Filter>Baekjoon\0.DataStructure\0.Bronze</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\0.Bronze\4562.cpp">
+      <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
