--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2751,5 +2751,8 @@
     <ClCompile Include="Baekjoon\97.Rank\0.Bronze\24265.cpp">
       <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\2.Greedy\0.Bronze\2864.cpp">
+      <Filter>Baekjoon\2.Greedy\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
