--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -642,6 +642,9 @@
     <ClCompile Include="Baekjoon\16.Combinatorics\2.Gold\11401.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Baekjoon\16.Combinatorics\2.Gold\1256.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Baekjoon\16.Combinatorics\2.Gold\15824.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
