--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2799,5 +2799,8 @@
     <ClCompile Include="Baekjoon\97.Rank\0.Bronze\10824.cpp">
       <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\0.DataStructure\0.Bronze\2605.cpp">
+      <Filter>Baekjoon\0.DataStructure\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
