--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2853,5 +2853,8 @@
     <ClCompile Include="Baekjoon\1.DynamicProgramming\2.Gold\2213.cpp">
       <Filter>Baekjoon\1.DynamicProgramming\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\1.Silver\1748.cpp">
+      <Filter>Baekjoon\97.Rank\1.Silver</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
