--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2862,5 +2862,8 @@
     <ClCompile Include="Baekjoon\97.Rank\0.Bronze\15733.cpp">
       <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\0.DataStructure\2.Gold\16235.cpp">
+      <Filter>Baekjoon\0.DataStructure\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
