--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2868,5 +2868,8 @@
     <ClCompile Include="Baekjoon\0.DataStructure\1.Silver\12789.cpp">
       <Filter>Baekjoon\0.DataStructure\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\4.BFS\2.Gold\4991.cpp">
+      <Filter>Baekjoon\4.BFS\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
