--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2874,5 +2874,8 @@
     <ClCompile Include="Baekjoon\5.BinarySearch\1.Silver\2343.cpp">
       <Filter>Baekjoon\5.BinarySearch\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\9.TopologicalSorting\2.Gold\1516.cpp">
+      <Filter>Baekjoon\9.TopologicalSorting\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
