--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2877,5 +2877,8 @@
     <ClCompile Include="Baekjoon\9.TopologicalSorting\2.Gold\1516.cpp">
       <Filter>Baekjoon\9.TopologicalSorting\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\1.Silver\2669.cpp">
+      <Filter>Baekjoon\97.Rank\1.Silver</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
