--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2901,5 +2901,8 @@
     <ClCompile Include="Baekjoon\15.NumberTheory\1.Silver\9613.cpp">
       <Filter>Baekjoon\15.NumberTheory\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\0.Bronze\11549.cpp">
+      <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
