--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2910,5 +2910,8 @@
     <ClCompile Include="Baekjoon\97.Rank\0.Bronze\10804.cpp">
       <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\2.Gold\21611.cpp">
+      <Filter>Baekjoon\97.Rank\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
