--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3003,5 +3003,11 @@
     <ClCompile Include="Baekjoon\97.Rank\0.Bronze\15727.cpp">
       <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\1.Silver\10451.cpp">
+      <Filter>Baekjoon\97.Rank\1.Silver</Filter>
+    </ClCompile>
+    <ClCompile Include="Baekjoon\14.Tree\2.Gold\12837.cpp">
+      <Filter>Baekjoon\14.Tree\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
